--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1 class="naslov">Github - prvi projekt</h1>
+    <h2 class="podnaslov">Podsnaslov Github</h2>
   </body>
 </html>
